Fixed not wrapping of label text.

--- a/src/fluffyCheckbox.style.styl
+++ b/src/fluffyCheckbox.style.styl
@@ -26,4 +26,4 @@ fluffy-checkbox
       opacity 0
 
   .fc-label
-    display inline-block
+    display inline
